style edits, imports
can't import tidyverse in description, split out packages, remove redundent aa_get_elements, remove stringr dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(aa_breakdown_report)
 export(aa_creds)
 export(aa_get_data)
 export(aa_get_dimensions)
-export(aa_get_elements)
 export(aa_get_metrics)
 export(aa_ranked_report)
 export(aa_rankedtime_report)
@@ -15,5 +14,10 @@ export(addmetricsfilters)
 export(breakdowns)
 export(make_timeframe)
 import(assertthat)
+import(dplyr)
 import(httr)
-import(tidyverse)
+import(jsonlite)
+import(purrr)
+import(tidyr)
+importFrom(jsonlite,fromJSON)
+importFrom(purrr,map2)
