--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ Depends:
     R (>= 3.2.0)
 Imports:
     assertthat (>= 0.2.0),
+    curl (>= 3.3),
+    dplyr (>= 0.8.1),
     httr (>= 1.3.1),
     jsonlite (>= 1.5),
-    dplyr (>= 0.8.1),
-    curl (>= 3.3),
-    tidyverse (>= 1.2.1)
+    purrr (>= 0.3.2),
+    tidyr (>= 1.0.0)
 RoxygenNote: 6.1.1
